# synapse

./: .env_template  .gitignore  CLAUDE.md  README.md  SPEC.md  implementation_plan.md  prompt.yaml  pyproject.toml  sprint.md
.cursor/: environment.json
src/synapse/: __init__.py  agents.py  config.py  exceptions.py  logging.py  main.py  models.py
src/synapse/models/: __init__.py  prompts.py
src/synapse/parsers/: __init__.py  telegram.py
src/synapse/processors/: __init__.py  extractors.py  map.py  reduce.py
src/synapse/utils/: __init__.py  file_io.py
tests/: README.md  test_reduce_helpers.py
